--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "@nuxtjs/tailwindcss": "^6.12.2",
     "chart.js": "^4.4.7",
     "nuxt": "^3.14.1592",
+    "nuxt-auth-utils": "^0.5.7",
     "radix-vue": "^1.9.11",
     "vue": "latest",
     "vue-chartjs": "^5.3.2",
-    "vue-router": "latest"
+    "vue-router": "latest",
+    "zod": "^3.24.1"
   },
   "devDependencies": {
     "@iconify/vue": "^4.2.0"
